[metadata]
name = CosmosHashLib
version = 0.0.1
author = Cosmos Bots
author_email = contact@cosmosbots.com
description = A simple hashing wrapper with support for salts and peppers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vihangatheturtle/CosmosHashLib
project_urls =
    Bug Tracker = https://github.com/vihangatheturtle/CosmosHashLib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src